samples/_failures_safe/1761296310_2a93a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10c95bf2.c: In function ‘main’:
./samples/SAFE/__tmp_10c95bf2.c:170:16: error: missing terminating " character
  170 |         printf("Failed to create matrix
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_10c95bf2.c:170:9: error: expected expression at end of input
  170 |         printf("Failed to create matrix
      |         ^~~~~~
./samples/SAFE/__tmp_10c95bf2.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10c95bf2.c:170:9: error: expected declaration or statement at end of input
